--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,7 +672,7 @@ section {
 .why-us .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#7cc576 50%, rgba(124, 197, 118, 0.4) 52%);
+  background: radial-gradient(#d7402b 50%, rgba(182, 99, 44, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -720,7 +720,7 @@ section {
 }
 
 .why-us .play-btn:hover::after {
-  border-left: 15px solid #7cc576;
+  border-left: 15px solid #d7402b;
   transform: scale(20);
 }
 
@@ -810,7 +810,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #7cc576;
+  background:#d7402b;
   color: #fff;
 }
 
@@ -957,11 +957,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #7cc576;
+  border: 1px solid #d7402b;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #7cc576;
+  background-color:#d7402b;
 }
 
 .portfolio-details .portfolio-info {
@@ -1028,11 +1028,11 @@ section {
 }
 
 .testimonials .quote-icon i {
-  color: #7cc576;
+  color:#d7402b;
   font-size: 24px;
   padding: 18px;
   border-radius: 50px;
-  border: 2px solid #7cc576;
+  border: 2px solid #d7402b;
 }
 
 .testimonials .testimonial-item {
@@ -1079,7 +1079,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #7cc576;
+  background-color: #d7402b;
 }
 
 @media (min-width: 992px) {
@@ -1149,7 +1149,7 @@ section {
   height: 40px;
   opacity: 0;
   transition: bottom ease-in-out 0.4s;
-  background: rgba(124, 197, 118, 0.8);
+  background: rgba(183, 28, 10, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1189,7 +1189,7 @@ section {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 15px;
-  color: #7cc576;
+  color: #d7402b;
 }
 
 .team .member .member-info p {
@@ -1261,7 +1261,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #7cc576;
+  color: #d7402b;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1280,8 +1280,8 @@ section {
   display: inline-block;
   padding: 10px 40px 12px 40px;
   border-radius: 5px;
-  border: 2px solid #7cc576;
-  color: #7cc576;
+  border: 2px solid#d7402b;
+  color: #d7402b;
   font-size: 14px;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
@@ -1290,22 +1290,22 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #7cc576;
+  background: #d7402b;
   color: #fff;
 }
 
 .pricing .recommended {
-  border-color: #7cc576;
+  border-color:#d7402b;
 }
 
 .pricing .recommended .btn-buy {
-  background: #7cc576;
+  background:#d7402b;
   color: #fff;
 }
 
 .pricing .recommended .btn-buy:hover {
-  background: #61b959;
-  border-color: #61b959;
+  background: #d7402b;
+  border-color:#d7402b;
 }
 
 .pricing .recommended-badge {
@@ -1317,7 +1317,7 @@ section {
   font-size: 12px;
   padding: 4px 25px 6px 25px;
   background: #eaf6e9;
-  color: #7cc576;
+  color:#d7402b;
   border-radius: 50px;
   text-transform: uppercase;
   font-weight: 600;
@@ -1393,7 +1393,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #7cc576;
+  color: #d7402b;
   float: left;
   width: 44px;
   height: 44px;
@@ -1425,7 +1425,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #7cc576;
+  background:#d7402b;
   color: #fff;
 }
 
@@ -1456,7 +1456,7 @@ section {
 .contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background:#d7402b;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1476,7 +1476,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid#d7402b;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1497,7 +1497,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #7cc576;
+  background: #d7402b;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1506,7 +1506,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #61b959;
+  background:#d7402b;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1650,7 +1650,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #7cc576;
+  background:#d7402b;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1658,7 +1658,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #5ab652;
+  background:#d7402b;
 }
 
 #footer .footer-top .social-links {
@@ -1668,7 +1668,7 @@ section {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #7cc576;
+  background:#d7402b;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1681,7 +1681,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #5ab652;
+  background:#d7402b;
   color: #fff;
   text-decoration: none;
 }
